// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frame toHTML custom inputs 1`] = `
"<head>
  <style>
    body { margin: 0; }
  </style>
</head>
<body>
  <div id=\\"#app\\"></div>
  <script type=\\"module\\">
    const message = 'hello'
  </script>
</body>"
`;

exports[`Frame toHTML empty state 1`] = `
"<head>
  <style>
    
  </style>
</head>
<body>
  
  <script type=\\"module\\">
    
  </script>
</body>"
`;
